# PROJECT_ORACLE_0NEW

./: !ENGINE_LOG!  .env.example  .gitattributes  .gitignore  README.md  Starting  init_db.py  pyproject.toml  requirements.txt  run_all.bat  run_backtest.py  run_rl_backtest.py  run_web.py  trading_bot.db
.github/: copilot-instructions.md
configs/: accounts.json  accounts_template.json  auto_exit_daemon.json  config_schema.json  logging.json  risk_profiles.json  settings.json  strategy_overrides.json  strategy_params.json
data/: ALL_COINS_1min_2022_2024.csv  BTCUSDT_1.csv  BTCUSDT_1min_2022_2024.csv
data/cache/: BTCUSDT_1d_2023_full.csv
docs/: github_mcp_setup.md
outputs/: daily_report.txt  engine_status.json  listener.pid
outputs/backtests/: BTCUSDT_20230101_latest_MA_10_30_stats.txt  BTCUSDT_2024-01-01_MA_10_30_stats.txt  BTC_USDT_2023-01-01_MA_10_30_stats.txt  ETHUSDT_2024-01-01_MA_10_30_stats.txt  OPUSDT_2024-01-01_MA_10_30_stats.txt
outputs/commands/: command_queue.json
outputs/live_logs/: trade_log.csv
src/: command_manager.py  main.py  main_unified.py
src/backtest/: runner.py  simulator.py
src/config/: __init__.py  check_secrets.py  config_loader.py  data_windows.py  runtime_manager.py  utils.py
src/core/: balance_guard.py  balance_utils.py  bybit_router.py  clients.py  data_manager.py  database.py  enhanced_trading_logic.py  exchange_api.py  exchange_info.py  exit_manager.py  market_features.py  market_features_optimized.py  model_loader.py  models.py  order_helpers.py  (+9 more)
tools/: profile_backtest.py  test_github_token.py
web/: index.html
(+55 files in other folders)
